# rtmalloc

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  default_classes.toml  index.html  rtmalloc.toml
.claude/: settings.local.json
.github/scripts/: extract-criterion.py  parse-mimalloc-bench.py
.github/workflows/: bench-pr.yml  bench-track.yml  ci.yml  merge-queue.yml
bench/: build.rs
bench/benches/: alloc_bench.rs
benches/: alloc_bench.rs
dev/: index.html
dev/bench/: data.js  index.html
dev/charts/: index.html
docs/: allocator-comparison.md  rtmalloc-improvements.md
examples/: demo.rs
rseq/: Cargo.toml
rseq/examples/: cpu_id.rs  percpu_cache.rs
rseq/src/: abi.rs  lib.rs  ops.rs  percpu.rs  syscall.rs  thread.rs
scripts/: build_tcmalloc.rs
src/: allocator.rs  central_free_list.rs  cpu_cache.rs  ffi.rs  histogram.rs  lib.rs  macros.rs  page_heap.rs  pagemap.rs  platform.rs  size_class.rs  span.rs  stats.rs  sync.rs  thread_cache.rs  transfer_cache.rs
src/platform/: miri.rs  unix.rs  windows.rs
tests/: alignment.rs  debug_addr.rs  debug_isolate.rs  debug_minimal.rs  debug_sizes.rs  debug_vec.rs  histogram.rs  stress.rs
